// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridRow Default should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridRow WrappedColumns should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 3 (wraps on mobile)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 4 (wraps on mobile)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 5 (wraps on tablet)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "padding": 16,
            }
          }
        >
          <Text>
            Col 6 (wraps on tablet)
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
